[package]
name = "overengineered"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.79"
wasm-logger = "0.2"

yew = "0.19"
yew-router = { version = "0.16", package = "yew-router-nested" }
gloo-utils = "0.1"

chrono = { version = "0.4", features = ["wasmbind"] }

patternfly-yew = "0.1.1"

strum = "0.19"

log = "0.4"

